:bug: fix: 그룹 일부 삭제 시 롤링페이퍼를 소유하고 있다면 오류가 발생하던 문제 수정